--- a/.github/workflows/teardown.yml
+++ b/.github/workflows/teardown.yml
@@ -13,17 +13,19 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-        uses: actions/checkout@v5
+        uses: actions/checkout@v6
 
-      - name: Set up AWS CLI
-        uses: aws-actions/configure-aws-credentials@v2
+      - name: Set up AWS credentials
+        uses: aws-actions/configure-aws-credentials@v5
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-west-2
 
       - name: Teardown with Terraform
+        env:
+          TF_VAR_local_source_ip: ${{ secrets.LOCAL_SOURCE_IP }}
         run: |
           cd infra/terraform
-          terraform init
+          terraform init -upgrade
           terraform destroy -auto-approve
