--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,5 +1,6 @@
 FROM python:3.11-slim
 WORKDIR /app
 COPY app.py .
-RUN pip install flask
+COPY requirements.txt .
+RUN pip install --upgrade pip && pip install -r requirements.txt
 CMD ["python", "app.py"]
