--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -31,11 +31,14 @@ jobs:
           exit-code: '1'
           severity: 'CRITICAL'
 
+      - name: Install conftest
+        uses: artis3n/setup-conftest@v0
+        with:
+          conftest_version: 0.60.0
+
       - name: OPA policy check
         run: |
-          curl -L -o conftest.tar.gz https://github.com/open-policy-agent/conftest/releases/download/v0.60.0/conftest_Linux_x86_64.tar.gz
-          tar xzf conftest.tar.gz
-          ./conftest test --policy security/policies infra/terraform
+          conftest test --policy security/policies infra/terraform
 
   deploy:
     needs: security-scan
