--- a/.github/workflows/teardown.yml
+++ b/.github/workflows/teardown.yml
@@ -22,6 +22,9 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-west-2
 
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v3
+        
       - name: Teardown with Terraform
         env:
           TF_VAR_local_source_ip: ${{ secrets.LOCAL_SOURCE_IP }}
